@@ -180,6 +180,17 @@ struct fuse_context *fuse_get_context(struct fuse *f);
  */
 void fuse_main(int argc, char *argv[], const struct fuse_operations *op);
 
+/*
+ * Spawn an I/O slave, creating an fd suitable for passing to fuse_new()
+ *
+ * This spawns fusermount, and then a small message tosser process to
+ * allow access to fuse_new() and fuse_loop() without the limitations
+ * of reexecuting the main FUSE process and destroying stdin.
+ *
+ * @param mountpoint a char pointer to the requested mountpoint
+ */
+int fuse_mount_ioslave(char *mountpoint);
+
 /* ----------------------------------------------------------- *
  * Advanced API for event handling, don't worry about this...  *
  * ----------------------------------------------------------- */
