@@ -2,3 +2,4 @@ Makefile.in
 Makefile
 .deps
 fusermount
+fuse_ioslave
